<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="team.maci.mvvmnoteapp.ui.edit.EditViewModel" />

        <import type="team.maci.mvvmnoteapp.util.VisibilityConverter" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:text="@={viewModel.note.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="@dimen/m_spacing"
                android:text="@string/edit_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:text="@={viewModel.note.content}"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <Button
                android:onClick="@{() -> viewModel.onSubmitClickAction()}"
                android:layout_marginTop="@dimen/m_spacing"
                android:text="@string/edit_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <FrameLayout
            android:clickable="true"
            android:background="#77000000"
            android:visibility="@{VisibilityConverter.gone(!viewModel.loading)}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone">

            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </FrameLayout>
</layout>