<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="team.maci.mvvmnoteapp.ui.register.RegisterViewModel" />

        <import type="team.maci.mvvmnoteapp.util.VisibilityConverter" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/m_spacing">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_label_username" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{viewModel.usernameError}"
                android:textColor="@color/red"
                android:visibility="@{VisibilityConverter.gone(viewModel.usernameError == null)}"
                tools:visibility="gone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/m_spacing"
                android:text="@={viewModel.username}" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_label_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{viewModel.passwordError}"
                android:textColor="@color/red"
                android:visibility="@{VisibilityConverter.gone(viewModel.passwordError == null)}"
                tools:visibility="gone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_label_password_again" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/m_spacing"
                android:text="@={viewModel.password2}" />

            <Button
                android:onClick="@{() -> viewModel.onSubmitAction()}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_button_submit" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{VisibilityConverter.gone(!viewModel.loading)}"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>
</layout>