<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="team.maci.mvvmnoteapp.ui.login.LoginViewModel" />

        <import type="team.maci.mvvmnoteapp.util.VisibilityConverter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_label_username"
            app:layout_constraintBottom_toTopOf="@+id/input_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_label_password"
            app:layout_constraintBottom_toTopOf="@+id/input_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_username" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textPersonName"
            android:text="@={viewModel.username}"
            app:layout_constraintBottom_toTopOf="@+id/label_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_username" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toTopOf="@+id/button_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_password" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.onSubmitAction()}"
            android:text="@string/login_button_submit"

            app:layout_constraintBottom_toTopOf="@id/button_register"
            app:layout_constraintEnd_toEndOf="@+id/input_password"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> viewModel.onRegisterAction()}"
            android:text="@string/login_button_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_submit"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{VisibilityConverter.gone(!viewModel.loading)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:clickable="true"
            android:elevation="2dp"
            tools:visibility="gone"
            android:background="#77000000" />

        <ProgressBar
            tools:visibility="gone"
            android:elevation="3dp"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="@{VisibilityConverter.gone(!viewModel.loading)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/input_password"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>